--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       </section>
     </main>
   </div>
+  <script src="firebase-config.js"></script>
   <script type="module" src="app.js"></script>
   <!-- Firebase SDK -->
 <script type="module">
