--- a/index.html
+++ b/index.html
@@ -1,70 +1,81 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>C Helper</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>C Programming Practice</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="app">
-    <header>
-      <h1>C Helper IDE</h1>
-      <button id="panicBtn">Generate Random C Code</button>
-    </header>
-    <main>
-      <section id="compiler">
-       <textarea id="code" placeholder="Write your C code here..." rows="10" cols="50"></textarea>
-<br>
-<button id="runBtn">Run</button>
-        <pre id="output">Output will be shown here...</pre>
-      </section>
-      <section id="chat" style="display:none;">
-        <div id="messages"></div>
-        <input type="text" id="messageInput" placeholder="Type a message..." />
-        <button id="sendMessage">Send</button>
-      </section>
-    </main>
+
+  <div class="container">
+    <h1>C Practice Compiler</h1>
+    <textarea id="code" rows="10" placeholder="Write your C code here..."></textarea>
+    <button onclick="compileCode()">Run</button>
+    <pre id="output"></pre>
   </div>
+
+  <!-- Secret Chat Trigger -->
+  <input id="chatCommand" type="text" placeholder="Enter code... (try //open)" onkeyup="checkCommand(this)" />
+
+  <!-- Hidden Chat Box -->
+  <div id="chatBox" style="display:none; padding: 10px; border: 1px solid #ccc;">
+    <h3>Secret Chat 💗</h3>
+    <div id="messages" style="height: 150px; overflow-y: auto; background: #f9f9f9; margin-bottom: 10px;"></div>
+    <input type="text" id="msgInput" placeholder="Type a message..." />
+    <button onclick="sendMessage()">Send</button>
+  </div>
+
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
+
+  <!-- Firebase Config File -->
   <script src="firebase-config.js"></script>
-  <script type="module" src="app.js"></script>
-  <!-- Firebase SDK -->
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-  import { getDatabase, ref, set, onValue } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyBcGGjLZE3lk4gkPEN0EEis6rLV-hTHRqs",
-    authDomain: "secret-chat-d58c2.firebaseapp.com",
-    databaseURL: "https://secret-chat-d58c2-default-rtdb.firebaseio.com",
-    projectId: "secret-chat-d58c2",
-    storageBucket: "secret-chat-d58c2.appspot.com",
-    messagingSenderId: "1028244379630",
-    appId: "1:1028244379630:web:d059a9bfbe7f78eb9620ff"
-  };
+  <!-- Secret Chat Logic -->
+  <script>
+    const db = firebase.database();
+    const chatRoom = "secretChatRoom"; // change this if you want a different room
 
-  const app = initializeApp(firebaseConfig);
-  const db = getDatabase(app);
-
-  const chatRef = ref(db, 'chat/');
-
-  const codeInput = document.getElementById("code");
-  const runBtn = document.getElementById("runBtn");
-
-  // When Run is clicked, send code as a message
-  runBtn.onclick = () => {
-    const message = codeInput.value;
-    set(chatRef, { msg: message });
-  };
-
-  // Listen for updates from the other person
-  onValue(chatRef, (snapshot) => {
-    const data = snapshot.val();
-    if (data && data.msg) {
-      codeInput.value = data.msg;
+    function sendMessage() {
+      const msg = document.getElementById("msgInput").value;
+      if (msg.trim() === "") return;
+      db.ref(chatRoom).push().set({
+        msg: msg,
+        time: Date.now()
+      });
+      document.getElementById("msgInput").value = "";
     }
-  });
-</script>
+
+    function listenMessages() {
+      db.ref(chatRoom).on("value", snapshot => {
+        const output = document.getElementById("messages");
+        output.innerHTML = "";
+        snapshot.forEach(child => {
+          const data = child.val();
+          const msg = document.createElement("div");
+          msg.textContent = data.msg;
+          output.appendChild(msg);
+        });
+        output.scrollTop = output.scrollHeight;
+      });
+    }
+
+    function checkCommand(input) {
+      if (input.value.trim() === "//open") {
+        document.getElementById("chatBox").style.display = "block";
+        listenMessages();
+        input.style.display = "none";
+      }
+    }
+
+    function compileCode() {
+      const code = document.getElementById("code").value;
+      const output = document.getElementById("output");
+      output.textContent = "🧠 Compiling... (just pretend 😉)\n\n" + code;
+    }
+  </script>
+
 </body>
 </html>
